tests/ui/conditional-compilation/cfg-arg-invalid-8.rs
//@ compile-flags: --cfg )

fn main() {}

<<<<<<< HEAD
// ferrocene-annotations: um_rustc_cfg
=======
//~? ERROR invalid `--cfg` argument: `)` (expected `key` or `key="value"`)
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
